@@ -6,16 +6,18 @@
             :url "https://opensource.org/licenses/MIT"}
 
   :dependencies [[org.clojure/clojure "1.9.0"]
-                 [org.clojure/clojurescript "1.10.238"]
+                 [org.clojure/clojurescript "1.10.773"]
                  [org.clojure/core.async "0.3.443"]
-                 [cheshire "5.6.3"]
+                 [cheshire/cheshire "5.6.3"]
                  [stylefruits/gniazdo "1.1.4"]
                  [com.novemberain/monger "3.5.0"]
                  [differ "0.3.3"]
-                 [com.taoensso/sente "1.16.0"]
-                 [ring "1.7.1"]
+                 [com.taoensso/sente "1.16.2"]
+                 [ring/ring "1.7.1"]
                  [ring/ring-defaults "0.3.2"] ; Includes `ring-anti-forgery`, etc.
                  [ring/ring-json "0.4.0"]
+                 [puppetlabs/ring-middleware "1.3.0"]
+                 [ring-cors "0.1.13"]
                  [compojure "1.6.0"]
                  [hiccup "1.0.5"]
                  [aero "1.1.3"]
@@ -24,7 +26,6 @@
                  [crypto-password "0.2.0"]
                  [digest "1.4.6"]
                  [http-kit "2.4.0"]
-                 [clj-time "0.14.2"]
                  [com.draines/postal "2.0.2"]
                  [throttler "1.0.0"]
                  [clj-http "3.7.0"]
@@ -35,7 +36,6 @@
                  [org.clojure/tools.analyzer.jvm "0.7.2"]
                  [org.clojars.frozenlock/reagent-modals "0.2.8"]
                  [org.clojure/tools.cli "0.4.2"]
-                 [hawk "0.2.11"]
                  [danlentz/clj-uuid "0.1.9"]
                  [potemkin "0.4.5"]
                  [cond-plus "1.0.1"]
@@ -43,20 +43,30 @@
                  [org.clojure/data.csv "1.0.0"]
                  [medley "1.3.0"]
                  [org.slf4j/slf4j-nop "1.7.12"]
-                 [integrant "0.8.0"]]
+                 [integrant "0.8.0"]
+                 [cljc.java-time "0.1.18"]
+                 [time-literals "0.1.5"]]
 
   :plugins [[lein-cljsbuild "1.1.7"]
             [lein-figwheel "0.5.16"]
             [lein-ring "0.9.7"]
             [lein-eftest "0.5.8"]
-            [lein-exec "0.3.7"]]
+            [lein-exec "0.3.7"]
+            [cider/cider-nrepl "0.26.0"]]
 
   :profiles {:dev {:dependencies [[figwheel-sidecar "0.5.16"]
                                   [binaryage/devtools "0.9.7"]
-                                  [cider/piggieback "0.5.2"]]
-                   :plugins [[lein-figwheel "0.5.16"]
-                             [integrant/repl "0.3.2"]]
-                   :source-paths ["src/clj" "src/cljs" "src/cljc"]}}
+                                  [cider/piggieback "0.5.2"]
+                                  [com.clojure-goes-fast/clj-async-profiler "0.5.1"]
+                                  [rewrite-clj "1.0.699-alpha"]
+                                  [criterium "0.4.6"]
+                                  [integrant/repl "0.3.2"]]
+                   :plugins [[lein-figwheel "0.5.16"]]
+                   :source-paths ["dev" "src/clj" "src/cljs" "src/cljc" "test/clj"]
+                   :jvm-opts ["-Djdk.attach.allowAttachSelf"
+                              "-XX:+UnlockDiagnosticVMOptions"
+                              "-XX:-OmitStackTraceInFastThrow"
+                              "-XX:+DebugNonSafepoints"]}}
 
   :aliases {"fetch" ["run" "-m" "tasks.fetch/command"]
             "dumbrepl" ["trampoline" "run" "-m" "clojure.main/main"]
@@ -76,8 +86,7 @@
   ;; Compilation.
   :source-paths ["src/clj" "src/cljs/nr" "src/cljc"]
   ;; aot only the namespaces needed for the main game in uberjar, notably ignoring the test and (most of the) task namespaces.
-  :aot [#"web.core"
-        #"tasks.fetch"]
+  :aot [#"web.core"]
   :jar-name "netrunner.jar"
   :jar-exclusions [#"public/img/cards/*"]
   :uberjar-name "netrunner-standalone.jar"
@@ -85,11 +94,9 @@
   :omit-source true
   :main web.core
 
-
   ;; Misc
   :test-paths ["test/clj"]
   :eftest {:report eftest.report.pretty/report
-           ; :capture-output? false
            :fail-fast? false}
 
   :ring {:handler web.api/app}
@@ -128,5 +135,5 @@
 
   ;; Set timeout to 2 min to allow for full compilation after a clean.
   :repl-options {:timeout 180000
-                 :init-ns web.core
-                 :init (do (use 'web.lobby) (-main "dev"))})
+                 :init-ns dev.user
+                 :init (do (use 'web.core) (go))})
